<resources>
    <string name="app_name">FolkChat</string>
    <string name="phone_desc">FolkChat will need to verify your phone number. <b>What\'s my number?</b></string>
    <string name="next">Next</string>
    <string name="Description">Enter one time password send on +918698066529</string>
    <string name="privacy_desc">Read our <b>Privacy Policy.</b> Tap Login or Register to accept the <b>Term of Service.</b></string>
    <string name="agree">AGREE AND CONTINUE</string>
    <string name="welcome">Welcome To FolkChat</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="phone">Phone Number</string>
    <string name="code">CODE</string>
    <string name="verification">Verification</string>
    <string name="verify_code">verify code</string>
    <string name="profileDesc">Please provide your name, bio and profile photo</string>
    <string name="type_your_name">Type your name here</string>
    <string name="profileInfo">Profile Info</string>
    <string name="submit">Submit</string>
    <string name="resend">Didn\'t receive code? <b>Resend again</b></string>
    <string name="no_internet_desc">Make Sure Wifi or Mobile Data is\n turned on, then try again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="status">Status</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="online">Online</string>
    <string name="dashboard">Dashboard</string>
    <string name="type_a_message">Type a message…</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="posts">Posts</string>
    <string name="add">Add Story</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="username">Username</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont"> Don\'t have an account?</string>
    <string name="already"> Already have an account?</string>
    <string name="miss_reg">We missed you! Register to get started</string>
    <string name="miss_log">We missed you! Login to get started</string>
    <string name="forget">Forget Password?</string>
    <string name="email">Enter E-mail Address</string>
    <string name="password">Enter Password</string>
    <string name="name">Enter Name</string>
    <string name="need">Need Help?</string>
    <string name="send_email">Send Email</string>
    <string name="reset_password">Reset Password</string>


    <!-- fragment names -->
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View Comments</string>

    <!-- dialog names -->
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>


    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>

    <!-- Bundle arg names -->
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>

    <!-- activity names -->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>

    <!-- strings -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="notification">Notifications</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="add_post">Add to your post</string>
    <string name="sure">Are you sure you want to sign out?</string>
    <string name="sign_out">Sign Out</string>
    <string name="signing_out">Signing Out...</string>
    <string name="block">Block</string>
    <string name="settings">Settings</string>
    <string name="group_messaging">Group Messaging</string>

</resources>