<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="@drawable/white_corners"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/nointernet" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextBlack"
        android:text="@string/no_internet_connection"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="@color/colorTextBlack"
        android:text="@string/no_internet_desc"/>


    <TextView
        android:id="@+id/retry"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:background="@drawable/corners"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextWhite"
        android:text="@string/try_again"/>

</LinearLayout>