<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/tvConfirmSignout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/_15font_mdp" />

        <Button
            android:id="@+id/btnConfirmSignout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvConfirmSignout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextWhite"
            android:background="@drawable/corners"
            android:text="@string/sign_out"
            android:textSize="@dimen/_15font_mdp" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:theme="@style/AppTheme.PurpleAccent"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tvSigningOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/progressBar"
        android:layout_alignEnd="@+id/progressBar"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-26dp"
        android:textAlignment="center"
        android:text="@string/signing_out"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/_15font_mdp" />

</RelativeLayout>