<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    android:padding="30dp"
    android:transitionName="transition_OTP_screen"
    tools:context=".Activities.PhoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:text="@string/enter_phone"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/_20sdp"
            android:transitionName="transition_title_text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/phone_desc"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">


            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border"
                android:padding="7dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/countryCode"
                android:hint="@string/phone"
                android:textColorHint="@color/colorTextBlack"
                app:boxStrokeColor="@color/colorBlack"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorBlack"
                app:hintTextColor="@color/colorTextBlack"
                app:startIconDrawable="@drawable/ic_call"
                app:startIconTint="@color/colorBlack">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/colorTextBlack"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/NextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack"
                android:elevation="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/next"
                android:textColor="@color/colorTextWhite"
                android:transitionName="transition_next_btn" />


        </FrameLayout>


    </LinearLayout>
</ScrollView>