<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumPurple"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".Activities.WelcomeScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/ic_icon"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:padding="10dp"
                android:text="@string/privacy_desc"
                android:textColor="@color/colorTextBlack"
                android:textAlignment="center"
                android:textSize="@dimen/_10sdp" />

            <Button
                android:id="@+id/agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@drawable/white_corners"
                android:fontFamily="@font/poppins"
                android:text="@string/agree"
                android:textStyle="bold"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>